res/css/style.css
/* css reset */
* {
    margin: 0;
    padding: 0;
    border: 0;
    box-sizing: border-box;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
ul {
    list-style: none;
}

/* css init */
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #eee;
}
img {
    width: 300px;
}

/* navbar */
nav {
    background-color: #fff;
    width: 100%;
    height: 80px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed ;
    z-index: 1;
}
nav h1 {
    width: 30%;
    text-align: center;
    font-size: 35px;
    font-weight: 1000;
}
nav h1:hover {
    color: orange;
}
nav ul {
    display: flex;
    width: 60%;
    justify-content: space-evenly;
}
nav li {
    text-align: center;
    padding: 10px;
    font-size: 20px;
}
nav li .iconfont {
    font-size: 25px;
}
nav li:hover {
    color: orange;
    background-color: #f6f6f6;
    border-radius: 10px;
}

/* container part */
.container {
    width: 90%;
    background-color: #fff;
    min-height: calc(100vh - 100px);
}

/* Header */
header {
    margin-top: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
}
header .text {
    padding: 10px;
    width: 500px;
    height: 400px;
    flex-direction: column;
}
header .text h1 {
    font-size: 50px;
}
header .text h2 {
    font-size: 35px;
    color: #aaa;
    font-weight: lighter;
    margin: 10px 0;
}
header .text h2 .iconfont {
    font-size: 30px;
    font-weight: bold;
}
header .text h3 {
    font-size: 28px;
    font-weight: lighter;
    margin: 10px 0;
}
header .text h3 .iconfont {
    font-size: 30px;
    font-weight: bold;
}
header .text div {
    color: #fff;
    font-size: 30px;
    width: 250px;
    height: 40px;
    line-height: 40px;
    border-radius: 20px;
    background-color: orange;
    text-align: center;
    margin-top: 60px;
}
header .text div .iconfont {
    font-size: 30px;
}
header .image {
    height: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
header .image img {
    border-radius: 50%/35% 35% 65% 65%;
}
header .image div {
    font-size: 25px;
    margin-top: 50px;
    display: flex;
}
header .image div .iconfont {
    margin: 0 20px;
    font-size: 25px;
    color: orange;
    font-weight: bold;
}
header .image div .icon-mouse {
    animation: bounce 1s infinite;
}
@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0);
    }
    40% {
        transform: translateY(12px);
    }
    60% {
        transform: translateY(5px);
    }
}

/* section */
section.container {
    border: transparent solid 60px;
    /* border: lightblue solid 60px; */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: calc(100vh - 100px);
}
section.container h1 {
    font-size: 50px;
    font-weight: lighter;
}
section.container h2 {
    font-size: 30px;
    color: #aaa;
    font-weight: lighter;
}

/* about */
.about .content {
    display: flex;
    justify-content: center;
}
.about .content .image img{
    width: 250px;
    margin: 40px 10px;
    border-radius: 10px;
}
.about .content .text{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 40px 20px;
    width: 45%;
}
.about .content .text .info {
    display: grid;
    grid-template-columns: 1fr 1fr 1.5fr 2fr;
}
.about .content .text .info p {
    line-height: 1.5;
    color: orange;
}
.about .content .text .introduction {
    font-size: 20px;
    word-wrap: break-word;
    word-break: break-all;
    margin: 20px 10px;
}
.about .content .text .list {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
}
.about .content .text .list .item {
    width: 100px;
    height: 80px;
    background-color: #eee;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
}
.about .content .text .list .item h3 {
    font-size:25px;
    color: orange;
}
.about .content .text .list .item p {
    font-weight: lighter;
}
.about .content .text .button {
    font-size: 20px;
    margin-top: 30px;
    padding: 15px 30px;
    border-radius: 20px;
    background-color: orange;
    color: #fff;
    line-height: 1.5;
}
.about .content .text .button .iconfont {
    font-size: 20px;
}

/* skill */
.skill .content {
    width: 60%;
}
.skill .content .skill-content .skill-head {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.skill .content .skill-content .skill-head .iconfont {
    font-size: 30px;
    font-weight: bold;
    color: orange;
    margin: 10px;
}
.skill .content .skill-content .icon-language {
    position: relative;
    top: 40px;
    left: -50px;
}
.skill .content .skill-content .skill-head div h3{
    font-size: 30px;
    font-weight: lighter;
}
.skill .content .skill-content .skill-head div h4 {
    font-size: 20px;
    font-weight: lighter;
    color: #aaa;
    white-space:nowrap; 
}
.skill .content .skill-content .skill-head .icon-right {
    text-align: right;
}
.skill .content .skill-content .skill-list {
    margin-top: 20px;
}
.skill .content .skill-content .skill-list .item .text{
    display: flex;
    justify-content: space-between;
}
.skill .content .skill-content .skill-list .item .line {
    margin: 10px 0;
    background-color: antiquewhite;
    width: 100%;
    height: 5px;
    position: relative;
}
.skill .content .skill-content .skill-list .item .line::before {
    content: '';
    height: 100%;
    background-color: orange;
    position: absolute; 
    width: 50%; /* 这里可以设置进度百分比 */
}
/* 收起状态 */
.skill .skill-content.close .skill-head .icon-right {
    transform: rotate(-90deg);
}
.skill .skill-content.close .skill-list {
    display: none;
}
/* 打开状态 */
.skill .skill-content.open .skill-head .icon-right {
    transform: rotate(90deg);
}

main div {
    width: 500px;
    height: 200px;
    background-color: aquamarine;
}

footer div {
    width: 500px;
    height: 200px;
    background-color: bisque;
}

